--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
